Fixed dark mode btn color + feature img contrast

--- a/css/global.css
+++ b/css/global.css
@@ -80,7 +80,7 @@
 		--body: #e0e0e0;
 		/* --body: #a0a0a0; */
 		--grey-text: #a0a0a0;
-		--primary-btn-bg: #fdc124;
+		--primary-btn-bg: #fdd368;
 		--secondary-btn-border: #bdbdbd;
 
 		/*Footer*/
