--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,8 @@
 
 .review .rev-author {
 	font-weight: bold;
+	font-size: 14px;
+	line-height: 18px;
 }
 h2.review-section-head {
 	padding-bottom: 56px;
